--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
+;[env:nodemcuv2]
+;platform = espressif8266
+;board = nodemcuv2
+;framework = arduino
+;upload_port = COM5
+;upload_speed = 57600
+;monitor_port = COM5
+;monitor_speed = 115200
+;lib_deps = 
+;	adafruit/Adafruit NeoPixel@^1.7.0
+;	knolleary/PubSubClient @ ^2.8      
+
+[env:nodemcu-32s]
+platform = espressif32
+board = nodemcu-32s
 framework = arduino
-upload_port = COM5
-upload_speed = 57600
-monitor_port = COM5
+upload_port = COM6
+upload_speed = 500000
+monitor_port = COM6
 monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.7.0
